<resources>
    <string name="app_name">Court Counter</string>
    <string name="safety">Safety</string>
    <string name="extra_point">Extra Point</string>
    <string name="reset">Reset</string>
    <string name="field_goal">Field Goal</string>
    <string name="touchdown">Touchdown</string>
    <string name="_0">0</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
</resources>
