<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/americanfootball"
    tools:context="com.example.android.courtcounter.MainActivity">

    <TextView
        android:id="@+id/teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/teamA"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_a_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:fontFamily="sans-serif-light"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="@dimen/_56sp"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamA" />

    <Button
        android:id="@+id/touchdown_a"
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="add6_a"
        android:text="@string/touchdown"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_score" />

    <Button
        android:id="@+id/field_goal_a"
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="add3_a"
        android:text="@string/field_goal"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/touchdown_a" />

    <Button
        android:id="@+id/safety_a"
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="add2_a"
        android:text="@string/safety"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_goal_a" />

    <Button
        android:id="@+id/freethrow_a"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="freethrow_a"
        android:text="@string/extra_point"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safety_a" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/teamB"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_b_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="@dimen/_56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/field_goal_b"
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="add3_b"
        android:text="@string/field_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/touchdown_b"
        tools:layout_editor_absoluteY="190dp" />

    <Button
        android:id="@+id/safety"
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="add2_b"
        android:text="@string/safety"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/field_goal_b" />

    <Button
        android:id="@+id/freethrow_b"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="freethrow_b"
        android:text="@string/extra_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/safety" />


    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="350dp"
        android:background="#00ACC1"
        app:layout_constraintBottom_toBottomOf="@+id/freethrow_b"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/teamA" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freethrow_a"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/touchdown_b"
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:onClick="add6_b"
        android:text="@string/touchdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/team_b_score" />
</android.support.constraint.ConstraintLayout>
